Fixes clipped last element in info table

--- a/media/sdfv_embedded.css
+++ b/media/sdfv_embedded.css
@@ -228,6 +228,8 @@ pre.code code {
 #info-container {
   margin-top: .5rem;
   width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 #info-title-container {
@@ -249,9 +251,8 @@ pre.code code {
 }
 
 #info-contents {
-  overflow-y: scroll;
-  height: 90%;
   width: 100%;
+  margin-bottom: 1rem;
 }
 
 #info-contents .info-subtitle {
